# tink-go

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  deps.bzl  extensions.bzl  go.mod  go.sum  tink_go_awskms_repo_WORKSPACE  tink_go_awskms_repo_deps.bzl  tink_go_awskms_repo_go.mod  tink_go_awskms_repo_go.sum  tink_go_hcvault_repo_README.md  tink_go_hcvault_repo_WORKSPACE  tink_go_hcvault_repo_deps.bzl  tink_go_hcvault_repo_go.mod  tink_go_hcvault_repo_go.sum
aead/: BUILD.bazel  aead.go  aead_benchmark_test.go  aead_factory.go  aead_factory_test.go  aead_init_test.go  aead_key_templates.go  aead_key_templates_test.go  aead_test.go  aes_ctr_hmac_aead_key_manager.go  aes_ctr_hmac_aead_key_manager_test.go  aes_gcm_key_manager.go  aes_gcm_key_manager_test.go  aes_gcm_siv_key_manager.go  aes_gcm_siv_key_manager_test.go  chacha20poly1305_key_manager.go  chacha20poly1305_key_manager_test.go  kms_envelope_aead.go  kms_envelope_aead_example_test.go  kms_envelope_aead_key_manager.go  kms_envelope_aead_key_manager_test.go  kms_envelope_aead_test.go  xchacha20poly1305_key_manager.go  xchacha20poly1305_key_manager_test.go
aead/aesgcm/: BUILD.bazel  aead.go  aead_test.go  aesgcm.go  aesgcm_test.go  key.go  key_manager.go  key_manager_test.go  key_test.go  primitive.go  primitive_test.go  protoserialization.go  protoserialization_test.go
core/cryptofmt/: BUILD.bazel  cryptofmt.go  cryptofmt_test.go
daead/: BUILD.bazel  aes_siv_key_manager.go  aes_siv_key_manager_test.go  daead.go  daead_benchmark_test.go  daead_factory.go  daead_factory_test.go  daead_init_test.go  daead_key_templates.go  daead_key_templates_test.go  daead_test.go
docs/: FIPS.md
hybrid/: BUILD.bazel  ecies_aead_hkdf_dem_helper.go  ecies_aead_hkdf_dem_helper_test.go  ecies_aead_hkdf_hybrid_decrypt_test.go  ecies_aead_hkdf_hybrid_encrypt_test.go  ecies_aead_hkdf_private_key_manager.go  ecies_aead_hkdf_private_key_manager_test.go  ecies_aead_hkdf_public_key_manager.go  ecies_aead_hkdf_public_key_manager_test.go  hpke_private_key_manager.go  hpke_private_key_manager_test.go  hpke_public_key_manager.go  hpke_public_key_manager_test.go  hybrid.go  hybrid_b243759652_test.go  hybrid_benchmark_test.go  hybrid_decrypt_factory.go  hybrid_encrypt_factory.go  hybrid_factory_test.go  hybrid_key_templates.go  hybrid_key_templates_test.go  hybrid_test.go
insecurecleartextkeyset/: BUILD.bazel  example_test.go  insecurecleartextkeyset.go  insecurecleartextkeyset_test.go
insecuresecretdataaccess/: BUILD.bazel
insecuresecretkeyaccess/: BUILD.bazel  insecuresecretkeyaccess.go
internal/: BUILD.bazel
internal/config/: BUILD.bazel  config.go  config_test.go  v0.go  v0_test.go
internal/config/aeadconfig/: v0_test.go
internal/config/daeadconfig/: v0_test.go
internal/config/hybridconfig/: v0_test.go
internal/config/jwtmacconfig/: v0_test.go
internal/config/jwtsignatureconfig/: v0_test.go
internal/config/keyderivationconfig/: v0_test.go
internal/config/macconfig/: v0_test.go
internal/config/prfconfig/: v0_test.go
internal/config/signatureconfig/: v0_test.go
internal/config/streamingaeadconfig/: v0_test.go
internal/configuration/: BUILD.bazel  configuration.go  configuration_test.go
internal/internalapi/: BUILD.bazel
internal/outputprefix/: BUILD.bazel  outputprefix_test.go
internal/protoserialization/: BUILD.bazel  protoserialization.go  protoserialization_test.go
internal/tinkerror/: BUILD.bazel  tinkerror_test.go
internal/tinkerror/tinkerrortest/: BUILD.bazel
jwt/: BUILD.bazel  jwk_converter.go  jwk_converter_test.go  jwt.go  jwt_config.go  jwt_config_test.go  jwt_ecdsa_signer_key_manager.go  jwt_ecdsa_signer_key_manager_test.go  jwt_ecdsa_signer_verifier.go  jwt_ecdsa_signer_verifier_test.go  jwt_ecdsa_verifier_key_manager.go  jwt_ecdsa_verifier_key_manager_test.go  jwt_encoding.go  jwt_encoding_test.go  jwt_full_mac_test.go  jwt_full_signer_verifier.go  jwt_full_signer_verifier_test.go  jwt_hmac_key_manager.go  jwt_hmac_key_manager_test.go  jwt_key_templates.go  jwt_key_templates_test.go  jwt_mac_benchmark_test.go  jwt_mac_factory.go  jwt_mac_factory_test.go  jwt_mac_kid.go  jwt_mac_kid_test.go  jwt_rsa_ssa_pkcs1_signer_key_manager.go  jwt_rsa_ssa_pkcs1_signer_key_manager_test.go  jwt_rsa_ssa_pkcs1_verifier_key_manager.go  jwt_rsa_ssa_pkcs1_verifier_key_manager_test.go  jwt_rsa_ssa_pss_signer_key_manager.go  jwt_rsa_ssa_pss_signer_key_manager_test.go  jwt_rsa_ssa_pss_verify_key_manager.go  jwt_rsa_ssa_pss_verify_key_manager_test.go  jwt_signature_benchmark_test.go  jwt_signer_factory.go  jwt_signer_kid.go  jwt_signer_verifier_factory_test.go  jwt_signer_verifier_kid_test.go  jwt_test.go  (+5 more)
key/: BUILD.bazel  key.go
keyderivation/: BUILD.bazel  keyderivation.go  keyderivation_key_templates.go  keyderivation_key_templates_test.go  keyderivation_test.go  keyset_deriver.go  keyset_deriver_factory.go  keyset_deriver_factory_test.go  keyset_deriver_factory_x_test.go  keyset_deriver_key_templates.go  keyset_deriver_key_templates_test.go  prf_based_deriver.go  prf_based_deriver_key_manager.go  prf_based_deriver_key_manager_test.go  prf_based_deriver_test.go
mac/: mac.go  (+12 more)
proto/ed25519_go_proto/: BUILD.bazel  ed25519.pb.go
proto/tink_go_proto/: BUILD.bazel  tink.pb.go
secretdata/: BUILD.bazel  example_test.go  secretdata.go  secretdata_test.go
secretkeyaccess/: BUILD.bazel  example_test.go  secretkeyaccess.go  secretkeyaccess_test.go
signature/ecdsa/: BUILD.bazel  ecdsa.go  ecdsa_test.go  key.go  key_test.go  protoserialization.go  protoserialization_test.go  signer.go  signer_key_manager.go  signer_key_manager_test.go  signer_verifier_test.go  verifier.go  verifier_key_manager.go  verifier_key_manager_test.go
signature/ed25519/: BUILD.bazel  ed25519.go  ed25519_test.go  key.go  key_test.go  protoserialization.go  protoserialization_test.go  signer.go  signer_key_manager.go  signer_key_manager_test.go  signer_verifier_test.go  verifier.go  verifier_key_manager.go  verifier_key_manager_test.go
testing/insecuresecretdataaccesstest/: BUILD.bazel  insecuresecretdataaccesstest.go
(+697 files in other folders)
