module(
    name = "tink-go",
    version = "2.2.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.8",
)

bazel_dep(
    name = "rules_go",
    version = "0.39.1",
    repo_name = "io_bazel_rules_go",
)

bazel_dep(
    name = "gazelle",
    version = "0.31.0",
    repo_name = "bazel_gazelle",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.21.8")

go_sdk.nogo(nogo = "@//:tink_nogo")

go_sdk.host()

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

# Direct Go dependencies.
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
)

wycheproof_extension = use_extension(
    "//:extensions.bzl",
    "wycheproof_extension",
    dev_dependency = True,
)

use_repo(wycheproof_extension, "wycheproof")
