# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Tink Go repository module."""

module(
    name = "tink-go",
    version = "2.2.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)

bazel_dep(
    name = "rules_go",
    version = "0.50.0",
    repo_name = "io_bazel_rules_go",
)

bazel_dep(
    name = "gazelle",
    version = "0.38.0",
    repo_name = "bazel_gazelle",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")


go_sdk.nogo(nogo = "//:tink_nogo")

go_sdk.download(version = "1.22.6")

go_sdk.host()

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

# Direct Go dependencies.
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
)

wycheproof_extension = use_extension(
    "//:extensions.bzl",
    "wycheproof_extension",
    dev_dependency = True,
)

use_repo(wycheproof_extension, "wycheproof")
