load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "insecuresecretdataaccess",
    srcs = ["insecuresecretdataaccess.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/insecuresecretdataaccess",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":insecuresecretdataaccess",
    visibility = ["//visibility:public"],
)
