load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "key",
    srcs = ["key.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/key",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":key",
    visibility = ["//visibility:public"],
)
