load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "secretkeyaccess",
    srcs = ["secretkeyaccess.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/secretkeyaccess",
    visibility = ["//visibility:public"],
    deps = ["//insecuresecretkeyaccess"],
)

alias(
    name = "go_default_library",
    actual = ":secretkeyaccess",
    visibility = ["//visibility:public"],
)

go_test(
    name = "secretkeyaccess_test",
    srcs = [
        "example_test.go",
        "secretkeyaccess_test.go",
    ],
    deps = [
        ":secretkeyaccess",
        "//insecuresecretkeyaccess",
    ],
)
