load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aesgcm",
    srcs = [
        "aesgcm.go",
        "key.go",
        "key_manager.go",
    ],
    importpath = "github.com/tink-crypto/tink-go/v2/aead/aesgcm",
    visibility = ["//visibility:public"],
    deps = [
        "//aead/subtle",
        "//core/registry",
        "//internal/internalregistry",
        "//internal/outputprefix",
        "//key",
        "//keyset",
        "//proto/aes_gcm_go_proto",
        "//proto/tink_go_proto",
        "//secretdata",
        "//subtle/random",
        "@org_golang_google_protobuf//proto",
    ],
)

alias(
    name = "go_default_library",
    actual = ":aesgcm",
    visibility = ["//visibility:public"],
)

go_test(
    name = "aesgcm_test",
    srcs = [
        "key_manager_test.go",
        "key_test.go",
    ],
    deps = [
        ":aesgcm",
        "//aead/subtle",
        "//core/cryptofmt",
        "//core/registry",
        "//insecuresecretdataaccess",
        "//internal/internalregistry",
        "//proto/aes_gcm_go_proto",
        "//proto/tink_go_proto",
        "//secretdata",
        "//subtle/random",
        "//testutil",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//proto",
    ],
)
