load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//:__subpackages__"])  # keep

licenses(["notice"])  # keep

go_library(
    name = "cryptofmt",
    srcs = ["cryptofmt.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/core/cryptofmt",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/outputprefix",
        "//proto/tink_go_proto",
    ],
)

go_test(
    name = "cryptofmt_test",
    srcs = ["cryptofmt_test.go"],
    deps = [
        ":cryptofmt",
        "//proto/tink_go_proto",
    ],
)

alias(
    name = "go_default_library",
    actual = ":cryptofmt",
    visibility = ["//:__subpackages__"],
)
