load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/internalapi",
        "//key",
    ],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    deps = [
        ":config",
        "//internal/internalapi",
        "//key",
    ],
)
