load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "configuration",
    srcs = ["configuration.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/internal/configuration",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/internalapi",
        "//key",
    ],
)

alias(
    name = "go_default_library",
    actual = ":configuration",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "configuration_test",
    srcs = ["configuration_test.go"],
    deps = [
        ":configuration",
        "//internal/internalapi",
        "//key",
    ],
)
