load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "outputprefix",
    srcs = ["outputprefix.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/internal/outputprefix",
    visibility = ["//:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":outputprefix",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "outputprefix_test",
    srcs = ["outputprefix_test.go"],
    deps = [":outputprefix"],
)
