load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protoserialization",
    srcs = ["protoserialization.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/internal/protoserialization",
    visibility = ["//:__subpackages__"],
    deps = ["//proto/tink_go_proto"],
)

alias(
    name = "go_default_library",
    actual = ":protoserialization",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "protoserialization_test",
    srcs = ["protoserialization_test.go"],
    deps = [
        ":protoserialization",
        "//proto/tink_go_proto",
    ],
)
