load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protoserialization",
    srcs = ["protoserialization.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/internal/protoserialization",
    visibility = ["//:__subpackages__"],
    deps = [
        "//core/registry",
        "//key",
        "//proto/tink_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

alias(
    name = "go_default_library",
    actual = ":protoserialization",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "protoserialization_test",
    srcs = ["protoserialization_test.go"],
    deps = [
        ":protoserialization",
        "//core/registry",
        "//key",
        "//keyset",
        "//proto/tink_go_proto",
        "//signature",
        "//testkeyset",
        "//testutil",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
