load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ecdsa",
    srcs = [
        "ecdsa.go",
        "key.go",
        "proto.go",
        "protoserialization.go",
        "signer_key_manager.go",
        "verifier_key_manager.go",
    ],
    importpath = "github.com/tink-crypto/tink-go/v2/signature/ecdsa",
    visibility = ["//visibility:public"],
    deps = [
        "//core/registry",
        "//internal/outputprefix",
        "//internal/protoserialization",
        "//key",
        "//keyset",
        "//proto/common_go_proto",
        "//proto/ecdsa_go_proto",
        "//proto/tink_go_proto",
        "//signature/subtle",
        "//subtle",
        "@org_golang_google_protobuf//proto",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ecdsa",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ecdsa_test",
    srcs = [
        "key_test.go",
        "protoserialization_test.go",
        "signer_key_manager_test.go",
        "verifier_key_manager_test.go",
    ],
    embed = [":ecdsa"],
    deps = [
        "//core/cryptofmt",
        "//core/registry",
        "//internal/protoserialization",
        "//key",
        "//proto/common_go_proto",
        "//proto/ecdsa_go_proto",
        "//proto/tink_go_proto",
        "//signature/subtle",
        "//subtle/random",
        "//testutil",
        "@org_golang_google_protobuf//proto",
    ],
)
