load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ed25519",
    srcs = [
        "ed25519.go",
        "key.go",
        "protoserialization.go",
        "signer_key_manager.go",
        "verifier_key_manager.go",
    ],
    importpath = "github.com/tink-crypto/tink-go/v2/signature/ed25519",
    visibility = ["//visibility:public"],
    deps = [
        "//core/registry",
        "//insecuresecretdataaccess",
        "//internal/internalregistry",
        "//internal/outputprefix",
        "//internal/protoserialization",
        "//key",
        "//keyset",
        "//proto/ed25519_go_proto",
        "//proto/tink_go_proto",
        "//secretdata",
        "//signature/subtle",
        "@org_golang_google_protobuf//proto",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ed25519",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ed25519_test",
    srcs = [
        "key_test.go",
        "protoserialization_test.go",
        "signer_key_manager_test.go",
        "verifier_key_manager_test.go",
    ],
    embed = [":ed25519"],
    deps = [
        "//core/cryptofmt",
        "//core/registry",
        "//insecuresecretdataaccess",
        "//internal/internalregistry",
        "//internal/protoserialization",
        "//key",
        "//proto/ed25519_go_proto",
        "//proto/tink_go_proto",
        "//secretdata",
        "//signature/subtle",
        "//subtle/random",
        "//testutil",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//proto",
    ],
)
