load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//:__subpackages__"])  # keep

licenses(["notice"])  # keep

go_library(
    name = "insecuresecretdataaccesstest",
    testonly = 1,
    srcs = ["insecuresecretdataaccesstest.go"],
    importpath = "github.com/tink-crypto/tink-go/v2/testing/insecuresecretdataaccesstest",
    visibility = ["//visibility:public"],
    deps = ["//insecuresecretdataaccess"],
)

alias(
    name = "go_default_library",
    actual = ":insecuresecretdataaccesstest",
    visibility = ["//visibility:public"],
)
